# AAF11

./: .env.example  .gitignore  AAF11_Nexus_Spec_v1.0.docx  PRODUCT.md  PROGRESS.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  desktop-release.yml
apps/desktop/: .env.example  components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  api.ts  auth.tsx  index.css  main.tsx  styles.css  tauri.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: generate-icon.mjs  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AppSidebar.tsx  Chart.tsx  Login.tsx  channel-sales-chart.tsx  interactive-sales-chart.tsx  live-logs-feed.tsx  product-sales-table.tsx  rich-sales-stat.tsx  simple-logs-stat.tsx  simple-logs-table.tsx  simple-users-table.tsx  source-sales-meter.tsx  traffic-logs-chart.tsx  usage-logs-meter.tsx
apps/desktop/src/lib/: supabase.ts
apps/hub/: next.config.mjs  package.json  tsconfig.json
apps/hub/src/: db.ts  load-env.ts  payload-types.ts  payload.config.ts  poller-worker.ts  seed.ts
apps/web/: next.config.mjs  package.json  tsconfig.json
docs/: AAF11-Company-Foundation.md  AAF11-Growth-and-Plan.md  BRAND.md  DEPLOY-FREE.md  DEPLOYMENT.md  DO-AND-DONT.md  MANUAL.md  README.md  SDK.md  SECURITY.md  TEST-VS-REAL.md
docs/specs/: 2026-06-21-aaf11-nexus-design.md
examples/demo-connector/: .env.example  README.md  index.js  package-lock.json  package.json
(+54 files in other folders)
