[package]
name = "aaf11-nexus"
version = "0.1.0"
description = "AAF11 Nexus desktop app"
authors = ["Team AAF11"]
edition = "2021"

[lib]
name = "aaf11_nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
